[package]
name = "pallet-roster"
authors.workspace = true
description = "Frame pallet for managing team membership"
version = "0.1.0"
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
md5 = { version = "0.7.0", default-features = false }
uuid = { version = "1.8.0", default-features = false, features = ["v3"] }
codec.workspace = true
scale-info.workspace = true

# Substrate
frame-benchmarking = { optional = true, workspace = true }
frame-support.workspace = true
frame-system.workspace = true
pallet-balances.workspace = true
sp-std.workspace = true
sp-arithmetic = { workspace = true }
sp-runtime.workspace = true

[dev-dependencies]
sp-core.workspace = true
sp-io.workspace = true


[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
]
std = [
  "codec/std",
  "frame-benchmarking/std",
  "frame-support/std",
  "frame-system/std",
  "scale-info/std",
  "sp-arithmetic/std",
  "sp-core/std",
  "sp-io/std",
  "sp-runtime/std",
]
try-runtime = [
  "frame-support/try-runtime",
  "frame-system/try-runtime",
  "sp-runtime/try-runtime",
]
